fixed alignment problem and inconsistency [#148343187]

--- a/app/assets/stylesheets/dashboard/layout.sass
+++ b/app/assets/stylesheets/dashboard/layout.sass
@@ -1216,11 +1216,10 @@ div.permissions_dialog
   width: 200px
   z-index: 5
 
-#protocol
-  .control-label
-    margin-bottom: 0
-    padding-top: 7px
-    text-align: right
+.control-label
+  margin-bottom: 0
+  padding-top: 7px
+  text-align: right
 
 .locked
   margin-left: 3px
